trabalho pratico - funcionalidades adicionadas

--- a/app_university/pubspec.yaml
+++ b/app_university/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   uses-material-design: true
   assets:
     - images/lake.jpg
+    - images/indonesia.jpg
+    - images/olho.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
